# clikit

./: .env.example  .gitattributes  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  STANDARDS.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  _typos.toml  clippy.toml  codecov.yml  deny.toml  justfile  nextest.toml  process-compose.yml
.agileplus/: worklog.md
.forge/: FORGE_PR_DESCRIPTION.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yaml  ci.yml  quality-gate.yml
ADR/: 001-hexagonal-architecture.md  002-plugin-system.md
benches/: fibonacci.rs
docs/journeys/: index.md  quick-start.md
docs/stories/: hello-world.md  index.md
docs/traceability/: index.md
src/: lib.rs
src/adapters/: mod.rs
src/adapters/primary/: cli.rs  mod.rs
src/adapters/secondary/: config.rs  mod.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/queries/: mod.rs
src/application/services/: mod.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/errors/: mod.rs
src/domain/events/: mod.rs
src/domain/ports/: mod.rs
src/domain/services/: mod.rs
src/domain/value_objects/: mod.rs
src/infrastructure/: error.rs  logging.rs  mod.rs  tracing.rs
src/plugins/: example.rs  mod.rs
tests/: integration.rs  trace_tests.rs
